--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
-        android:name="com.example.pr06_version2.ui.profile.DetailFragment"
+        android:name="com.example.pr06_version2.ui.detail.DetailFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_detail">
         <action
